perf: optimize automaton transition lookups and acceptance checks (#93)
What:
- Replaced double map lookups (containsKey + get) with a single get and
null check in hot path transition methods.
- Replaced stream().anyMatch(finalStates::contains) with
Collections.disjoint(currentStates, finalStates) for checking
acceptance.

Why:
- In Automata transition loops, maps are frequently queried. A double
lookup traverses the hash map twice. Calling it once halves the
overhead.
- Using streams in a hot path causes unnecessary object allocations,
whereas Collections.disjoint is highly optimized for sets.

Impact:
- Reduces map lookups by ~50% in automaton execution and conversion
phases.
- Eliminates stream overhead for acceptance checks, reducing garbage
collection pressure.

Measurement:
- Verify by running the full test suite with `mvn clean test
-Dmaven.compiler.source=21 -Dmaven.compiler.target=21`. Performance
tests or profilers (like VisualVM) would show reduced time spent in map
lookup and stream allocation methods.

---
*PR created automatically by Jules for task
[6769841623034439294](https://jules.google.com/task/6769841623034439294)
started by @Tugamer89*

---------

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>